refactor controllers actions and model methods

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,7 +1,26 @@
-%p#notice= notice
-%p
-  = @images.each do |image|
-    = image_tag "#{image.image}"
-= link_to 'Edit', edit_category_path(@category)
-|
-= link_to 'Back', categories_path
+.row
+  .col-xs-12
+    - if user_signed_in?
+      .row#subscribe-row
+        .col-xs-12
+          %div{align: "center"}
+            = render "subscriptions/subscription_form"
+      .row
+        .col-xs-12
+          %div{align: "center"}
+            = link_to(new_image_path(@category.slug), {class: 'btn btn-primary'}, :method => :get) do
+              = t('.upload_new_image')
+    .row
+      - @images_with_likes.each do |image_hash|
+        .col-xs-12
+          %div{align: "center"}
+            .thumbnail.single-cat-img-thumb
+              = image_tag "#{image_hash[:image_key].image.url}", class: 'single-cat-img'
+              .caption
+                %div{align: "left"}
+                  - if user_signed_in?
+                    - if image_hash[:like_key] == nil
+                      = render "likes/like_form_categories_img", local_form_image_id: image_hash[:image_key].id, local_form_likes_count: image_hash[:likes_count_key]
+                    - if image_hash[:like_key] != nil
+                      = render "likes/like_form_categories_img", local_form_image_id: image_hash[:image_key].id, local_form_like_id: image_hash[:like_key].id, local_form_likes_count: image_hash[:likes_count_key]
+
