--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,12 +5,12 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to t('.company_name'), root_path, class: "navbar-brand"
+      = link_to t('.company_name'), root_path, class: "navbar-brand", id: 'company-name'
 
     #myNavbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li.dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", id: 'header-dropdown-categories'}
             = t('.categories')
             %span.caret
           %ul.dropdown-menu
@@ -19,19 +19,19 @@
                 = link_to "#{category.name}", category_path(category.slug), :method => :get
             %li.divider
             %li
-              = link_to t('.all_categories'), categories_path
+              = link_to t('.all_categories'), categories_path, id: 'header-all-categories'
         %li
-          = link_to t('.images'), images_path
+          = link_to t('.images'), images_path, id: 'header-images'
         %li
-          = link_to t('.comments'), comments_path
+          = link_to t('.comments'), comments_path, id: 'header-comments'
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", id: 'header-dropdown-lang'}
             = t('.language')
             %span.caret
           %ul.dropdown-menu
-            %li= link_to 'en', root_path(locale: :en)
-            %li= link_to 'ru', root_path(locale: :ru)
+            %li= link_to 'en', root_path(locale: :en), id: 'header-en'
+            %li= link_to 'ru', root_path(locale: :ru), id: 'header-ru'
         - if user_signed_in?
           %li
             = link_to t('.profile'), profile_path, {class: 'glyphicon glyphicon-user'}
@@ -39,6 +39,6 @@
             = link_to t('.logout'), destroy_user_session_path, method: :delete
         - else
           %li
-            = link_to t('.sign_up'), new_user_registration_path, {class: 'glyphicon glyphicon-user'}
+            = link_to t('.sign_up'), new_user_registration_path, {class: 'glyphicon glyphicon-user', id: 'header-sign-up'}
           %li
-            = link_to t('.login'), new_user_session_path, {class: 'glyphicon glyphicon-log-in'}
+            = link_to t('.login'), new_user_session_path, {class: 'glyphicon glyphicon-log-in', id: 'header-login'}
