--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,14 +1,16 @@
 = form_with(model: category, local: true) do |form|
   - if category.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(category.errors.count, "error")
-        prohibited this category from being saved:
-      %ul
-        - category.errors.full_messages.each do |message|
-          %li= message
+    .row
+      .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3
+        .p.text-center.category-new-error
+          = pluralize(category.errors.count, "error")
+          prohibited this category from being saved:
+          - category.errors.full_messages.each do |message|
+            .p.text-center
+              = message
   .field
-    = form.label :name
-    = form.text_field :name, id: :category_name
+    .row
+      .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3
+        = form.text_field :name, placeholder: 'name', class: 'category-name-input', id: :category_name
   .actions
-    = form.submit
+    = form.submit class: 'btn button-create-category', id: 'btn-create category'
