--- a/app/views/likes/_unlike.html.haml
+++ b/app/views/likes/_unlike.html.haml
@@ -1,4 +1,3 @@
-= link_to'<i class="glyphicon glyphicon-thumbs-down btn btn-default"></i>'.html_safe, image_like_path(@image.id, @like.id), :method => :delete, remote: true
+= link_to'<i class="fa fa-thumbs-up"></i>'.html_safe, image_like_path(@image.id, @like.id), :method => :delete, remote: true
 %span.likes-count
   = @image.likes.size
-  = t('.likes')
