--- a/app/views/subscriptions/_subscribe.html.haml
+++ b/app/views/subscriptions/_subscribe.html.haml
@@ -1,2 +1,2 @@
 = form_for(@category, url: category_subscriptions_path(@category.id), html: { method: :post }, remote: true) do |f|
-  = f.submit t('.subscribe'), class: "btn btn-success"
+  = f.submit t('.subscribe'), class: "btn btn-success subscribe-button"
