--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,15 +4,17 @@
       .col-xs-12
         .auth-form-container.auth-form-container-size
           = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-            = devise_error_messages!
-            = f.text_field :name, :placeholder => 'name', :class => 'auth-input', id: 'sign-up-name-input'
-            = f.text_field :email, placeholder: 'email', :class => 'auth-input', id: 'sign-up-email-input'
-            = f.password_field :password, :placeholder => 'password', :class => 'auth-input', id: 'sign-up-password-input'
-            = f.password_field :password_confirmation, :placeholder => 'password confirmation', :class => 'auth-input', id: 'sign-up-password-confirm-input'
-            %span.btn.btn-success.btn-file{:id => 'avatar-sign-up-button'}
+            - if devise_error_messages?
+              .sign-up-errors
+                = devise_error_messages!
+            = f.text_field :name, placeholder: 'name', class: 'auth-input', id: 'sign-up-name-input'
+            = f.text_field :email, placeholder: 'email', class: 'auth-input', id: 'sign-up-email-input'
+            = f.password_field :password, placeholder: 'password', class: 'auth-input', id: 'sign-up-password-input'
+            = f.password_field :password_confirmation, placeholder: 'password confirmation', class: 'auth-input', id: 'sign-up-password-confirm-input'
+            %span.btn.btn-file{id: 'avatar-sign-up-button'}
               %p#p-sign-up-avatar Choose avatar
-              \#{f.file_field :avatar, :id => 'avatar-sign-up'}
-            = f.submit 'Sign Up', class: 'btn btn-success button-auth', id: 'btn-sign-up'
+              \#{f.file_field :avatar, id: 'avatar-sign-up'}
+            = f.submit 'Sign Up', class: 'btn button-auth', id: 'btn-sign-up'
           %p.auth-users-shared-links
             = render "users/shared/links"
           .auth-form-bottom-empty-space
