--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,9 +21,10 @@ body {
   background-color: #fff;
 }
 
-//=========================header=========================
+//=========================HEADER=========================
 .header-main {
   background-color: #fff;
+  border-radius: 0;
 }
 
 .header-text {
@@ -37,219 +38,51 @@ body {
   font-size: xx-large;
 }
 
-//body {
-//  background: #76b852; /* fallback for old browsers */
-//  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-//  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-//  background: -o-linear-gradient(right, #76b852, #8DC26F);
-//  background: linear-gradient(to left, #76b852, #8DC26F);
-//  font-family: "Roboto", sans-serif;
-//  -webkit-font-smoothing: antialiased;
-//  -moz-osx-font-smoothing: grayscale;
-//}
-//
-//.nav {
-//  margin-bottom: 0px;
-//}
-//
-//.navbar-brand {
-//  font-size: 24pt;
-//}
-//
-//#myNavbar {
-//  font-size: 12pt;
-//}
-//
-//.alert {
-//  z-index: 1;
-//}
-//
-///*==============FOOTER=============*/
-//
-.footer-distributed{
-  background-color: #292c2f;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: left;
-  font: bold 16px sans-serif;
-
-  padding: 55px 50px;
+//=========================FOOTER=========================
+.footer {
+  background-color: #1C1D21;
+  font-family: Lucida Console, Monaco, monospace, serif;
+  height: 400px;
 }
 
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-  display: inline-block;
-  vertical-align: top;
+.footer-logo-row {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-/* Footer left */
-
-.footer-distributed .footer-left{
-  //width: 40%;
+.footer-logo {
+  font-weight: bolder;
+  color: white;
+  font-size: 40pt;
 }
 
-/* The company logo */
-
-.footer-distributed h3{
-  color:  #ffffff;
-  font: normal 36px 'Cookie', cursive;
-  margin: 0;
+.footer-follow-row {
+  margin-bottom: 25px;
 }
 
-.footer-distributed h3 span{
-  color:  #5383d3;
-}
-
-/* Footer links */
-
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 20px 0 12px;
-  padding: 0;
-}
-
-.footer-distributed .footer-links a{
-  display:inline-block;
-  line-height: 1.8;
-  text-decoration: none;
-  color:  inherit;
-}
-
-.footer-distributed .footer-company-name{
-  color:  #8f9296;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center{
-  //width: 35%;
-}
-
-.footer-distributed .footer-center i{
-  background-color:  #33383b;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
+.footer-follow {
   text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-  font-size: 17px;
-  line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffffff;
-  vertical-align: middle;
-  margin:0;
-}
-
-.footer-distributed .footer-center p span{
-  display:block;
-  font-weight: normal;
-  font-size:14px;
-  line-height:2;
-}
-
-.footer-distributed .footer-center p a{
-  color:  #5383d3;
-  text-decoration: none;;
-}
-
-
-/* Footer Right */
-
-.footer-distributed .footer-right{
-  //width: 20%;
-}
-
-.footer-distributed .footer-company-about{
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 13px;
-  font-weight: normal;
-  margin: 0;
-}
-
-.footer-distributed .footer-company-about span{
-  display: block;
-  color:  #ffffff;
-  font-size: 14px;
-  font-weight: bold;
   margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons{
-  margin-top: 25px;
-}
-
-.footer-distributed .footer-icons a{
+.footer-follow li {
   display: inline-block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  background-color:  #33383b;
-  border-radius: 2px;
+  margin-right: 10px;
+  margin-bottom: 13px;
+}
 
-  font-size: 20px;
-  color: #ffffff;
+.footer-follow li a {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   text-align: center;
-  line-height: 35px;
-
-  margin-right: 3px;
-  margin-bottom: 5px;
+  border-radius: 3px;
+  background-color: #6195FF;
+  color: #FFF;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 880px) {
-
-  .footer-distributed{
-    font: bold 14px sans-serif;
-  }
-
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-    display: block;
-    width: 100%;
-    margin-bottom: 40px;
-    //text-align: center;
-  }
-
-  .footer-distributed .footer-center i{
-    margin-left: 0;
-  }
-
-}
-
-.footer-xs-text-left {
-  text-align: center;
-  //display: inline !important;
-}
-
-.footer-xs-text-center {
-  text-align: center;
-  display: inline !important;
-}
-
-.footer-xs-text-right {
-  text-align: center;
-  //display: inline !important;
-}
-
-#notice {
-  z-index: 5;
-  position: absolute;
+.copyright-p {
+  color: white;
+  font-size: 14px;
 }
