--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -19,3 +19,131 @@
   -moz-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
   box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
 }
+
+//=========================IMAGES PAGE=========================
+
+.work {
+  position: relative;
+  padding: 20px;
+
+  .overlay {
+    background: #1C1D21;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    opacity: 0;
+    -webkit-transition: 0.2s opacity;
+    transition: 0.2s opacity;
+    -webkit-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+  }
+
+  .work-content {
+    position: absolute;
+    left: 25px;
+    right: 25px;
+    top: 50%;
+    text-align: center;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
+  .work-content {
+    h3 {
+      -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+      transform: translateY(100%);
+      opacity: 0;
+      color: #FFF;
+      margin-bottom: 10px;
+      -webkit-transition: 0.2s all;
+      transition: 0.2s all;
+      -webkit-transition-delay: 0.1s;
+      transition-delay: 0.1s;
+      font-size: 20px;
+      font-size: 2.5vw;
+    }
+  }
+
+  .work-content {
+    span {
+      display: block;
+      text-transform: uppercase;
+      -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+      transform: translateY(100%);
+      opacity: 0;
+      color: #6195FF;
+      margin-bottom: 5px;
+      -webkit-transition: 0.2s all;
+      transition: 0.2s all;
+      -webkit-transition-delay: 0.2s;
+      transition-delay: 0.2s;
+    }
+  }
+
+  .work-link {
+    text-align: center;
+    margin-top: 20px;
+    opacity: 0;
+    -webkit-transition: 0.2s opacity;
+    transition: 0.2s opacity;
+  }
+
+  .work-link {
+    a {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      background-color: #6195FF;
+      color: #FFF;
+      line-height: 50px;
+      text-align: center;
+    }
+  }
+}
+
+.work>img {
+  width: 100%;
+  max-height: 200px;
+}
+
+.work:hover {
+  .overlay {
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+    opacity: 0.8;
+  }
+
+  .work-content {
+    h3 {
+      -webkit-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      transform: translateY(0%);
+      opacity: 1;
+      -webkit-transition-delay: 0.1s;
+      transition-delay: 0.1s;
+    }
+  }
+
+  .work-content {
+    span {
+      -webkit-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      transform: translateY(0%);
+      opacity: 1;
+      -webkit-transition-delay: 0s;
+      transition-delay: 0s;
+    }
+  }
+
+  .work-link {
+    -webkit-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+    opacity: 1;
+  }
+}
+
