--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,6 +1,123 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//=========================CATEGORIES PAGE=========================
+.categories-page {
+  position: relative;
+  background-color: #F4F4F4;
+  padding: 40px 20px;
+  margin: 15px 0px;
+  .overlay {
+    background: #1C1D21;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    opacity: 0;
+    -webkit-transition: 0.2s opacity;
+    transition: 0.2s opacity;
+  }
+  .categories-page-content {
+    text-align: center;
+    position: relative;
+    z-index: 11;
+  }
+  .categories-page-content {
+    h3 {
+      margin-bottom: 10px;
+      -webkit-transition: 0.2s color;
+      transition: 0.2s color;
+    }
+  }
+  .categories-page-social {
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: 0.2s opacity;
+    transition: 0.2s opacity;
+    a {
+      display: block;
+      line-height: 50px;
+      width: 50px;
+      text-align: center;
+      background-color: #6195FF;
+      color: #FFF;
+    }
+  }
+  span {
+    font-size: 14px;
+    text-transform: uppercase;
+    -webkit-transition: 0.2s color;
+    transition: 0.2s color;
+  }
+}
+
+.categories-page::after {
+  content: "";
+  background-color: #1C1D21;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 0%;
+  z-index: 1;
+  -webkit-transition: 0.2s height;
+  transition: 0.2s height;
+}
+
+.categories-page:hover:after {
+  height: 100%;
+}
+
+.categories-page-img {
+  position: relative;
+  margin-bottom: 20px;
+  z-index: 11;
+}
+
+.categories-page-img>img {
+  width: 100%;
+  max-height: 180px;
+}
+
+.categories-page:hover {
+  .overlay {
+    opacity: 0.8;
+  }
+  .categories-page-content {
+    h3 {
+      color: #FFF;
+    }
+    span {
+      color: #6195FF;
+    }
+  }
+  .categories-page-social {
+    opacity: 1;
+  }
+}
+
+.categories-page-row {
+  min-height: 80vh;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .categories-page-img>img {
+    width: 100%;
+    max-height: 142px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .categories-page-img>img {
+    width: 100%;
+    max-height: 101px;
+  }
+}
+//=========================END CATEGORIES PAGE=========================
+
 .categories-small-thumb {
   max-width: 300px;
 }
