--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -4,14 +4,14 @@
       = paginate @images, :theme => 'twitter-bootstrap-3'
     .row
       - @images.each do |image|
-        .col-md-4.col-xs-6.work
+        .col-md-4.col-xs-6.images
           = image_tag image, class: 'img-responsive'
           .overlay
-          .work-content
+          .images-content
             %span Category
             %h3
               = image.model.category.name
-            .work-link
+            .images-link
               = link_to single_category_image_path(image.model.category.id, image.model.id), {class: 'lightbox'} do
                 %i.fa.fa-picture-o
     .text-center
