update front for single image page

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -193,6 +193,10 @@
   margin: 40px 0px;
 }
 
+.main-comments-container {
+  margin-bottom: 20px;
+}
+
 .image-comments .media {
   padding: 20px;
   background-color: #FFF;
