--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -132,3 +132,39 @@
   background-color: #6195FF;
 }
 //=========================END SINGLE CATEGORY PAGE=========================
+
+//=========================NEW CATEGORY PAGE=========================
+.categories-new-main {
+  min-height: 80vh;
+}
+
+.category-name-input {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  font-size: 14px;
+  border: none;
+  height: 45px;
+  padding-left: 10px;
+  color: #354052;
+  background: #F4F4F4;
+  border-bottom: 2px solid #EEE;
+}
+
+.button-create-category {
+  border-radius: 0 !important;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px;
+  height: 45px;
+  background: #6195FF;
+  color: #FFF;
+}
+
+.category-new-error {
+  margin-top: 20px;
+  color: red;
+}
+//=========================END NEW CATEGORY PAGE=========================
