--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -168,3 +168,42 @@
   border-radius: 0px;
   margin-bottom: 10px;
 }
+
+//=========================FORGOT PASSWORD PAGE=========================
+.forgot-pwd-main {
+  min-height: 80vh;
+}
+
+.forgot-pwd-input {
+  width: 80%;
+  margin-top: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px;
+  font-size: 14px;
+  border: none;
+  height: 45px;
+  padding-left: 10px;
+  color: #354052;
+  background: #F4F4F4;
+  border-bottom: 2px solid #EEE;
+}
+
+.btn-forgot-pwd {
+  border-radius: 0 !important;
+  margin-top: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px !important;
+  height: 45px;
+  background: #6195FF;
+  color: #FFF;
+}
+//=========================END FORGOT PASSWORD PAGE=========================
+
+//=========================DEVISE ERROR=========================
+.devise-errors {
+  color: red;
+  margin-top: 20px;
+}
+//=========================END DEVISE ERROR=========================
