--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -207,3 +207,35 @@
   margin-top: 20px;
 }
 //=========================END DEVISE ERROR=========================
+
+//=========================RESEND PASSWORD CONFIRMATION PAGE=========================
+.forgot-pwd-main {
+  min-height: 80vh;
+}
+
+.resend-pwd-confirmation-input {
+  width: 80%;
+  margin-top: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px;
+  font-size: 14px;
+  border: none;
+  height: 45px;
+  padding-left: 10px;
+  color: #354052;
+  background: #F4F4F4;
+  border-bottom: 2px solid #EEE;
+}
+
+.btn-resend-pwd-confirmation {
+  border-radius: 0 !important;
+  margin-top: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px !important;
+  height: 45px;
+  background: #6195FF;
+  color: #FFF;
+}
+//=========================RESEND PASSWORD CONFIRMATION PAGE=========================
