make button New category on Categories page

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -116,6 +116,11 @@
     max-height: 101px;
   }
 }
+
+.btn-new-category {
+  border-radius: 0px !important;
+  background-color: #6195FF;
+}
 //=========================END CATEGORIES PAGE=========================
 
 //=========================SINGLE CATEGORY PAGE=========================
