fixed flash and other notifications front

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,3 +86,15 @@ body {
   color: white;
   font-size: 14px;
 }
+
+//=========================BODY=========================
+.flash-notification {
+  z-index: 10;
+  position: absolute;
+}
+
+.alert-alert {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
