--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,7 +4,9 @@
       .col-xs-12
         .auth-form-container.auth-form-container-size
           = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-            = devise_error_messages!
+            - if devise_error_messages?
+              .sign-up-errors
+                = devise_error_messages!
             = f.text_field :name, placeholder: 'name', class: 'auth-input', id: 'sign-up-name-input'
             = f.text_field :email, placeholder: 'email', class: 'auth-input', id: 'sign-up-email-input'
             = f.password_field :password, placeholder: 'password', class: 'auth-input', id: 'sign-up-password-input'
