--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //=========================IMAGES PAGE=========================
+#images {
+  min-height: 80vh;
+}
+
+.images-index-row {
+  min-height: 60vh;
+}
 
 .images {
   position: relative;
