--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -2,7 +2,7 @@
   .container
     .text-center
       = paginate @images, :theme => 'twitter-bootstrap-3'
-    .row
+    .row.images-index-row
       - @images.each do |image|
         .col-md-4.col-xs-6.images
           = image_tag image, class: 'img-responsive'
