make translation for project pages

--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -11,6 +11,6 @@
   .field
     .row
       .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3
-        = form.text_field :name, placeholder: 'name', class: 'category-name-input', id: 'category_name'
+        = form.text_field :name, placeholder: true, class: 'category-name-input', id: 'category_name'
   .actions
     = form.submit class: 'btn button-create-category', id: 'btn-create category'
