--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -17,7 +17,8 @@
           = image_tag image.image.medium_thumb.url, class: 'img-responsive'
           .overlay
           .images-content
-            %span Category
+            %span
+              = t('.category')
             %h3
               = image.category.name
             .images-link
