--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -81,6 +81,47 @@
   margin-bottom: 0px !important;
 }
 
+.google-button {
+  display: inline-block;
+  background: white;
+  color: #444;
+  width: 190px;
+  border: thin solid #E0E0E0;
+  white-space: nowrap;
+  margin-top: 5px;
+}
+
+.google-button:hover {
+  cursor: pointer;
+  text-decoration:none;
+}
+
+span.label {
+  font-family: serif;
+  font-weight: normal;
+}
+
+span.google-icon {
+  background-image: url("btn_google_light_normal_ios.svg");
+  display: inline-block;
+  vertical-align: middle;
+  width: 42px;
+  height: 42px;
+  margin-left: -15px;
+  margin-top: -3px;
+}
+
+span.google-button-text {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 14px;
+  font-weight: bold;
+  /* Use the Roboto font that is loaded in the <head> */
+  font-family: 'Roboto', sans-serif;
+  margin-top: 1px;
+  text-decoration:none;
+}
+
 
 @media (max-width: 460px) {
   .auth-form-container-size {
