make new image email notification for subscribed users

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -173,3 +173,9 @@
   color: red;
 }
 //=========================END NEW CATEGORY PAGE=========================
+
+//=========================NEW IMAGE EMAIL NOTIFICATION=========================
+.email-signature {
+  text-align: right;
+}
+//=========================END NEW IMAGE EMAIL NOTIFICATION=========================
