refactor subscription form and remove redundant files

--- a/app/views/subscriptions/_subscription_form.html.haml
+++ b/app/views/subscriptions/_subscription_form.html.haml
@@ -1,5 +1,11 @@
 #subscribe_form
   - if current_user.subscribed?(@category.id)
-    = render "subscriptions/unsubscribe"
+    = form_for(@category, url: category_subscription_path(@category.id, @subscription.id), html: { method: :delete }, remote: true) do |f|
+      = f.submit t('.unsubscribe'), class: "btn btn-danger subscribe-button", id: 'unsubscribe-btn'
   - else
-    = render "subscriptions/subscribe"
+    = form_for(@category, url: category_subscriptions_path(@category.id), html: { method: :post }, remote: true) do |f|
+      = f.submit t('.subscribe'), class: "btn btn-success subscribe-button", id: 'subscribe-btn'
+  -#- if current_user.subscribed?(@category.id)
+  -#  = render "subscriptions/unsubscribe"
+  -#- else
+  -#  = render "subscriptions/subscribe"
