--- a/app/views/subscriptions/destroy.js.erb
+++ b/app/views/subscriptions/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#subscribe_form").html("<%= escape_javascript(render('subscriptions/subscribe',{@category => @category})) %>")
+$("#subscribe_form").html("<%= escape_javascript(render('subscriptions/subscription_form',{@category => @category})) %>")
