--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -22,14 +22,7 @@
           .image-comments
             %h3.title
               = @image.comments.size
-              - if @image.comments.size == 0
-                = t('.comments.zero', count: 0)
-              - elsif (@image.comments.size % 10) == 1
-                = t('.comments.one')
-              - elsif ((@image.comments.size % 10) > 4 && (@image.comments.size % 10) <= 9) || (@image.comments.size > 9 && @image.comments.size < 21) || ((@image.comments.size.to_s.chars.length > 1) && (@image.comments.size % 10 == 0))
-                = t('.comments.other')
-              - elsif (@image.comments.size % 10) > 1 && (@image.comments.size % 10) < 5
-                = t('.comments.few')
+              = t('.comments', count: @image.comments.size)
             .image
               .col-xs-12.main-comments-container
                 = render "comments/comments_container"
