--- a/app/views/subscriptions/_subscription_form.html.haml
+++ b/app/views/subscriptions/_subscription_form.html.haml
@@ -1,5 +1,5 @@
 #subscribe_form
-  - if current_user.subscribed(@category.id)
+  - if current_user.subscribed_image(@category.id)
     = form_for(@category, url: category_subscription_path(@category.id, @subscription.id), html: { method: :delete }, remote: true) do |f|
       = f.submit t('.unsubscribe'), class: "btn btn-danger subscribe-button", id: 'unsubscribe-btn'
   - else
