--- a/app/views/subscriptions/destroy.js.erb
+++ b/app/views/subscriptions/destroy.js.erb
@@ -1,1 +1,2 @@
-$("#subscribe_form").html("<%= escape_javascript(render('subscriptions/subscription_form',{@category => @category})) %>")
+$("#subscribe_form").empty()
+$("#subscribe_form").html("<%= escape_javascript(render partial: 'subscriptions/subscribe_button', locals: { category: @category}) %>")
