--- a/app/views/subscriptions/_subscription_form.html.haml
+++ b/app/views/subscriptions/_subscription_form.html.haml
@@ -1,8 +1,5 @@
 #subscribe_form
   - if current_user.subscribed(@category.id)
-    = form_for(@category, url: category_subscription_path(@category.id, @subscription.id), html: { method: :delete }, remote: true) do |f|
-      = f.submit t('.unsubscribe'), class: "btn btn-danger subscribe-button", id: 'unsubscribe-btn'
+    = render partial: 'subscriptions/unsubscribe_button', locals: { category:  @category, subscription: @subscription }
   - else
-    = form_for(@category, url: category_subscriptions_path(@category.id), html: { method: :post }, remote: true) do |f|
-      = f.submit t('.subscribe'), class: "btn btn-success subscribe-button", id: 'subscribe-btn'
-
+    = render partial: 'subscriptions/subscribe_button', locals: { category:  @category }
