--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -8,7 +8,7 @@
     .carousel-inner{:role => "listbox"}
       - if @carousel_images[:images_uploaded]
         .item.active.carousel-image
-          = image_tag @carousel_images[:images].first.image, alt: 'default.jpg'
+          = image_tag @carousel_images[:images].first.image.url, alt: 'default.jpg'
         - @carousel_images[:images].drop(1).each do |image|
           .item.carousel-image
             = image_tag image.image
