Fix image_tag url bug

--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -4,7 +4,7 @@
       %main#main.col-md-9
         .image
           .image-img
-            = image_tag @image.image, class: 'img-responsive'
+            = image_tag @image.image.url, class: 'img-responsive'
           .image-content
             %ul.image-meta
               %li
