--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,2 +1,2 @@
-$("#like_form").html("<%= escape_javascript(render('likes/unlike',{@image => @image})) %>")
-$("#like_form_category<%=@image.id %>").html("<%= escape_javascript(render('likes/unlike',{@image => @image})) %>")
+$("#like_form").empty()
+$("#like_form").html("<%= escape_javascript(render partial: 'likes/unlike_button', locals: { image:  @image, like: @like }) %>")
