--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#like_form").html("<%= escape_javascript(render('likes/like',{@image => @image})) %>")
-$("#like_form_category<%=@image.id %>").html("<%= escape_javascript(render('likes/like',{@image => @image})) %>")
+$("#like_form").empty()
+$("#like_form").html("<%= escape_javascript(render partial: 'likes/like_button', locals: { image:  @image }) %>")
